style.css
/* ... */
@media screen and (min-width: 1440px) {
    html {
        font-size: 16px;
    }
}
body {
    font-family: -apple-system, "Hiragino Sans", "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3","Hiragino Sans GB", "Meiryo", "Segoe UI", sans-serif;
    font-size: 1rem;
    font-feature-settings: "palt";
    padding: 0;
    margin: 0;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
}

button, input {
    font-family: -apple-system, "Hiragino Sans", "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3","Hiragino Sans GB", "Meiryo", "Segoe UI", sans-serif;
    font-feature-settings: "palt";
}

a {
    color: #ff1b71;
}

header {
    position: relative;
    display: flex;
    align-items: center;
    padding: 10px 15px;
    border-bottom: 3px solid #0096da;
    background-color: #efefef;
    background-image: repeating-linear-gradient(130deg, rgba(200,200,200,0.2), rgba(200,200,200,0.4) 3px, transparent 3px, transparent 6px), linear-gradient(to right, #fdf953, rgba(255,255,0,0));
    overflow: hidden;
}
header:before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    height: 3px;
    background-image: linear-gradient(to right, #e84a92 0%, #e84a92 340px, #fff 340px, #fff 800px);
    transform: skewX(-40deg);
}
header:after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 3px;
    background-image: linear-gradient(to right, #fff 0%, #fff 300px, #0096da 300px, #0096da 90% );
    transform: skewX(-40deg);
}
h1 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 900;
    margin: 0;
    font-size: 1.5em;
    font-style: italic;
}
h1 span {
    color: #0096da;
    font-size: 0.5em;
    vertical-align: middle;
    letter-spacing: -0.03em;
    text-shadow: 0 0 3px #fff, 1px 1px 2px #fff, -1px -1px 2px #fff;
}
h1 a {
    color: inherit;
    text-decoration: none;
    color: #fff;
    text-shadow: 0 -1px 2px #0096da, 1px 0 0 #e84a92, 0 0 10px #0096da, 0 0 5px #0096da;
}
h1 a:hover {
    text-decoration: underline;
}
header .lastupdated {
    position: relative;
    display: inline-block;
    padding: 5px 30px 5px 30px;
    margin-left: auto;
    margin-right: -30px;
    color: #fff;
    text-transform: uppercase;
}

@media screen and (max-width: 480px) {
    header .lastupdated {
        padding-left: 15px;
    }
}

header .lastupdated:before {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    background-color: #0096da;
    border-left: 3px solid #fff;
    box-shadow: -5px 0 0 #0096da;
    transform: skewX(-40deg);
}

header .lastupdated span {
    position: relative;
}

.column-toggle-bar {
    display: block;
    margin-bottom: 10px;
    padding: 2px 10px;
    background-color: #ddd;
    border-top: 2px solid #fff;
    overflow: hidden;
}

@media screen and (max-width: 480px) {
    .column-toggle-bar {
        overflow-x: auto;
        -webkit-overflow-scrolling: touch; 
    }
}

.column-toggle-bar .dt-buttons {
    float: none;
}

@media screen and (max-width: 480px) {
    .column-toggle-bar .dt-buttons {
        display: flex;
    }
}
.column-toggle-bar .dt-buttons > button.dt-button {
    position: relative;
    margin: 1px 0;
    font-size: 1rem;
    height: 40px;
    color: #333;
    overflow: visible;
    border: none;
    box-shadow: none;
    background: none;
    padding: 5px 20px;
}

@media screen and (max-width: 480px) {
    .column-toggle-bar .dt-buttons > button.dt-button {
        margin-right: 3px;
    }
}

.column-toggle-bar .dt-buttons > button.dt-button:hover,
.column-toggle-bar .dt-buttons > button.dt-button:active,
.column-toggle-bar .dt-buttons > button.dt-button:active:hover,
.column-toggle-bar .dt-buttons > button.dt-button:focus
.column-toggle-bar .dt-buttons > button.dt-button.active {
    border: none;
    box-shadow: none;
    background: none; 
}

.column-toggle-bar .dt-buttons > button.dt-button:before {
    content: "";
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: #eee;
    transform: skewX(-40deg);
}

.column-toggle-bar .dt-buttons > button.dt-button:hover:before {
    background-color: #eee;
    box-shadow: 0 -3px 0 0 #e84a92 inset;
}

.column-toggle-bar .dt-buttons > button.dt-button:active:before {
    background-color: #aaa;
    color: #fff;
}

.column-toggle-bar .dt-buttons > button.dt-button span {
    position: relative;
}

div.dt-button-collection button.dt-button,
div.dt-button-collection div.dt-button,
div.dt-button-collection a.dt-button {
    position: relative;
    left: 0;
    right: 0;
    width: 100%;
    display: block;
    float: none;
    margin-bottom: 4px;
    margin-right: 0;
    border: none;
    border-image-source: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 100'><defs><linearGradient id='a' gradientTransform='rotate(90)'><stop offset='0' stop-color='%23333'/><stop offset='1' stop-color='%2111'/></linearGradient></defs><path d='M30 0h140l30 50-30 50H30L0 50 30 0z' fill='url(%23a)'/><path d='M164.3 10l24 40-24 40H35.7l-24-40 24-40h128.6M170 0H30L0 50l30 50h140l30-50-30-50z'/><path d='M11.8 50l14 23.3V26.7L11.8 50zm162.4-23.3v46.6l14-23.3-14-23.3z' fill='%23ff1b71'/></svg>");
    border-image-slice: 0 30 fill;
    border-image-width: 0 30px;
    border-image-repeat: repeat;
    background-color: transparent;
    background-image: none;
    box-shadow: none;
    color: #fff;
    font-size: 1rem;
}
/* ... */

